--- a/css/certifications.css
+++ b/css/certifications.css
@@ -2,7 +2,7 @@
 
 .certifications-text {
     color: var(--dark-text);
-    font-family: Comfortaa, system-ui;
+    font-family: Comfortaa, Open Sans, system-ui;
     font-size: 24px;
     text-align: center;
 }
