--- a/css/main.css
+++ b/css/main.css
@@ -88,10 +88,10 @@ body.light::-webkit-scrollbar {
     background: var(--light-background)
 }
 
-/* Track */
+/* Track 
 ::-webkit-scrollbar-track {
 
-}
+} */
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
