Fix colors on projects.css

--- a/css/projects.css
+++ b/css/projects.css
@@ -93,9 +93,9 @@ body.light .download-link {
 }
 
 .download-link:hover{
-    background: #1d5643;
+    background: #1a437e;
 }
 
 body.light .download-link:hover {
-    background: #1d5643;
+    background: #1a437e;
 }
