Font auto import on main.css

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,8 @@
 
 /* Whole Page */
 
+@import url("https://assets.spacegamedev.com/css/fonts.css");
+
 *{
     margin: 0;
     box-sizing: border-box;
