New Header/Footer

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,10 @@
 
 @import url("https://assets.spacegamedev.com/css/fonts.css");
 
+@import url("generic/header.css");
+@import url("generic/sidebar.css");
+@import url("generic/footer.css");
+
 *{
     margin: 0;
     box-sizing: border-box;
@@ -93,7 +97,7 @@ body.light::-webkit-scrollbar {
     background: var(--light-background)
 }
 
-/* Track 
+/* Track
 ::-webkit-scrollbar-track {
 
 } */
@@ -114,227 +118,7 @@ body.light::-webkit-scrollbar-thumb:hover {
     background: var(--light-accent);
 }*/
 
-/*  Start Header Section */
 
-.header{
-    background: var(--dark-foreground);
-    height: 80px;
-    width: 100%;
-    border-bottom: 1px solid var(--dark-accent);
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 11;
-}
-
-body.light .header{
-    background: var(--light-foreground);
-    border-bottom: 1px solid var(--light-accent);
-}
-
-.hamburger-menu{
-    top: 20px;
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    left: 20px;
-    background: var(--dark-accent);
-    border-radius: 5px;
-    padding: 5px;
-    transition: background 0.5s;
-}
-
-body.light .hamburger-menu{
-    background: var(--light-accent);
-}
-
-.hamburger-menu:hover{
-    background: #999999;
-}
-
-body.light .hamburger-menu:hover{
-    background: var(--light-border);
-}
-
-.header-logo{
-    display: flex;
-    position: absolute;
-    top: 8px;
-    left: 50%;
-    -ms-transform: translate(-50%);
-    transform: translate(-50%);
-    width: 64px;
-    height: 64px;
-    background: var(--dark-accent);
-    padding: 5px;
-    border-radius: 12px;
-}
-
-body.light .header-logo{
-    background: var(--light-accent);
-}
-
-.theme-icon-light{
-    width: 32px;
-    height: 32px;
-}
-
-body.light .theme-icon-light{
-    display: none;
-}
-
-.theme-icon-dark {
-    display: none;
-}
-
-body.light .theme-icon-dark{
-    display: flex;
-    width: 32px;
-    height: 32px;
-}
-
-.btn-toggle{
-    display: flex;
-    position: absolute;
-    background: var(--dark-accent);
-    padding: 5px;
-    top: 18px;
-    right: 20px;
-    border-radius: 5px;
-    transition: background 0.5s;
-    border: none;
-    cursor: pointer;
-}
-
-.btn-toggle:hover{
-    background: #999999;
-}
-
-body.light .btn-toggle{
-    background: var(--light-accent);
-}
-
-body.light .btn-toggle:hover{
-    background: var(--sgd-blue);
-}
-
-/*  End Header Section */
-
-.betterstack-badge {
-    padding: 0px 8px 0px 8px;
-    display: block;
-}
-
-/* Sidebar */
-
-/* The sidebar menu */
-.sidebar {
-    height: 100%; /* 100% Full-height */
-    width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 15; /* Stay on top */
-    top: 0;
-    left: 0;
-    background: var(--dark-foreground); /* Black*/
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
-    /*border-right: ;*/
-}
-body.light .sidebar{
-    background: var(--light-foreground);
-    border-right: 1px solid var(--light-accent);
-}
-/* The sidebar links */
-.sidebar-link{
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: var(--dark-text);
-  display: block;
-  transition: background 0.3s;
-  font-family: Comfortaa, Open Sans, system-ui;
-  background: var(--dark-background);
-  border-radius: 5px;
-  margin: 5px;
-}
-.sidebar-link:hover{
-    background: var(--dark-accent);
-}
-body.light .sidebar-link{
-  color: var(--light-text);
-    background: var(--light-background);
-}
-body.light .sidebar-link:hover{
-    background: var(--light-accent);
-}
-/* Position and style the close button (top right corner) */
-.sidebar .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-  border: none;
-  cursor: pointer;
-  padding: 0px;
-}
-
-body.light .sidebar .closebtn {
-    filter: brightness(40%);
-}
-
-
-/* The button used to open the sidebar */
-.openbtn {
-  display: flex;
-  top: 15px;
-  position: absolute;
-  left: 20px;
-  font-size: 20px;
-  cursor: pointer;
-  background: var(--dark-accent);
-  padding: 5px;
-  border: none;
-  border-radius: 5px;
-  transition: background 0.5s;
-}
-.openbtn-img{
-  width: 40px;
-  height: 40px;
-}
-.openbtn:hover{
-  background: #999999;
-}
-body.light .openbtn{
-  background: var(--light-accent);
-}
-body.light .openbtn:hover{
-  background: var(--sgd-blue);
-}
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-  transition: margin-left .5s; /* If you want a transition effect */
-  padding: 20px;
-}
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidebar {padding-top: 15px;}
-  .sidebar a {font-size: 18px;}
-}
-.closenavbutton{
-  position: absolute;
-  top: 15px;
-  width: 30px;
-  height: 30px;
-  right: 1px;
-}
-
-body.light .closenavbutton{
-    color: #014D8E;
-}
 
 .standard-link{
     color: var(--sgd-blue);
@@ -351,81 +135,4 @@ body.light .standard-link{
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
-
-.footer{
-    background: var(--dark-foreground);
-    height: 435px;
-    border-top: 1px solid var(--dark-accent);
-
-    position: relative;
-    margin-top: -435px;
-    /* negative value of footer height */
-    clear: both;
-}
-
-body.light .footer{
-    background: var(--light-foreground);
-    border-top: 1px solid var(--light-accent);
-}
-
-.footer-p{
-  color: var(--dark-text);
-  line-height: 20px;
-  font-family: Comfortaa, Open Sans, system-ui;
-  font-size: 15px;
-    text-align: center;
-}
-
-body.light .footer-p{
-  color: var(--light-text);
-}
-
-.attribution{
-  color: var(--dark-text);
-  line-height: 20px;
-  font-family: Comfortaa, Open Sans, system-ui;
-  font-size: 15px;
-    text-align: center;
-}
-
-body.light .attribution{
-  color: var(--light-text);
-}
-
-.footer-link{
-    color: var(--dark-blue-high-contrast);
-}
-
-body.light .footer-link{
-    color: var(--light-blue-high-contrast);
-}
-
-#betterstack-attribution {
-    border-radius: 4px;
-}
-
-.text{
-    color: var(--dark-text);
-    font-family: Comfortaa, Open Sans, system-ui;
-    font-size: 20px;
-    margin-left: 10%;
-    margin-right: 10%;
-}
-
-body.light .text{
-  color: var(--light-text);
-}
-
-.generic-text-header {
-    font-family: Orbitron, Open Sans, system-ui;
-    font-size: 50px;
-    font-weight: bold;
-    color: var(--dark-text);
-    text-shadow: 4px 2px 4px #00000025;
-    text-align: center;
-}
-
-body.light .generic-text-header {
-    color: var(--light-text);
 }
