--- a/css/pages/resources.css
+++ b/css/pages/resources.css
@@ -1,7 +1,29 @@
 .sgd-logo-stack-image{
-    margin-inline-start: 10%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
     min-height: 128px;
     min-width: 128px;
     max-height: 256px;
     max-width: 256px;
+}
+
+.sgd-large-logo{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    width: 1024px;
+}
+
+.logo-text{
+    color: var(--dark-text);
+    font-family: Comfortaa, Open Sans, system-ui;
+    font-size: 20px;
+    display: block;
+    text-align: center;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 20px;
 }
