--- a/css/pages/socials.css
+++ b/css/pages/socials.css
@@ -1,60 +1,74 @@
-.socials-links {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: fit-content;
-    max-width: 80%;
-    background: var(--dark-foreground);
-    height: 100%;
-    vertical-align: middle;
+.flexbox {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-evenly;
+    justify-content: center;
+}
+
+.social-card {
+    width: 512px;
+    height: 256px;
+    margin: 10px;
     padding: 15px;
-    border: 1px solid var(--dark-accent);
     border-radius: 10px;
-}
-
-body.light .socials-links {
-    background: var(--light-foreground);
-    border: 1px solid var(--light-accent);
-}
-
-.social-link{
-    display: inline-block;
-    color: var(--dark-text);
+    background: var(--dark-foreground);
+    border: 1px solid var(--dark-accent);
+    transition: background 0.3s;
     text-decoration: none;
-    margin-left: 10px;
-    margin-right: 10px;
-    height: 100%;
-    vertical-align: middle;
 }
 
-body.light .social-link {
-    color: var(--light-text);
+body.light .social-card{
+    background: var(--light-foreground)
+}
+
+.social-card:hover{
+    background: var(--sgd-blue);
+}
+
+body.light .social-card:hover{
+    background: var(--light-sgd-blue)
 }
 
 .social-icon {
     width: 128px;
-    height: 100%;
-    vertical-align: middle;
-}
-
-.github-social-icon {
-    width: 128px;
     height: 128px;
-    vertical-align: middle;
+    float:left;
 }
 
-body.light .github-social-icon {
+body.light .github{
     filter: brightness(0%);
 }
 
-.social-link-label {
-    text-align: center;
-    padding: 12px;
+.social-name{
+    font-family: Orbitron, Open Sans, system-ui;
+    font-weight: bold;
+    font-size: 30px;
+    color: var(--dark-text);
+    float:left;
+    margin-left: 20px;
 }
 
-.youtube-link-label {
-    text-align: center;
-    padding-top: 38px;
-    padding-left: 12px;
-    padding-right: 12px;
+body.light .social-name {
+    color: var(--light-text);
+}
+
+.social-username{
+    font-family: Open Sans, system-ui;
+    color: #4a81d5;
+    font-size: 16px;
+    float:left;
+    margin-left: 20px;
+    line-height: 0;
+}
+
+.social-description{
+    font-family: Comfortaa, Open Sans, system-ui;
+    color: var(--dark-text);
+    font-size: 16px;
+    float:left;
+    margin-top: 20px;
+}
+
+body.light .social-description{
+    color: var(--light-text);
 }
