--- a/css/pages/socials.css
+++ b/css/pages/socials.css
@@ -55,6 +55,7 @@ body.light .social-name {
 
 .social-username{
     font-family: Open Sans, system-ui;
+    font-weight: bold;
     color: #4a81d5;
     font-size: 16px;
     float:left;
