--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,11 @@
 html,
 body{
     height: 100%;
+    background: var(--dark-background);
+}
+
+body.light html, body.light body{
+    background: var(--light-background);
 }
 
 #page-wrapper {
