Update file names

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,9 @@ import Footer from "../components/Footer.astro";
 import Header from "../components/react/Header.jsx";
 import Sidebar from "../components/react/Sidebar.jsx";
 
-import profilePicture from '../../public/images/pfp.webp';
-import airportPicture1 from '../../public/images/JH1_4303.jpg';
-import airportPicture2 from '../../public/images/JH1_3923.jpg';
+import profilePicture from '../../public/images/ProfilePicture.webp';
+import airportPicture1 from '../../public/images/777-Takeoff-Hero.JPG';
+import airportPicture2 from '../../public/images/A350-Takeoff-Hero.JPG';
 import moddingShowcaseImage from '../../public/images/FactoryProps1.webp';
 ---
 
