--- a/src/pages/linkinbio.astro
+++ b/src/pages/linkinbio.astro
@@ -3,7 +3,7 @@ import "../styles/linkinbio.scss";
 import Layout from "../layouts/Layout.astro";
 import {Image} from "astro:assets";
 
-import profilePicture from '../../public/images/pfp.webp';
+import profilePicture from '../../public/images/ProfilePicture.webp';
 
 import BioButton from "../components/BioButton.astro";
 
