Update file extensions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,12 +5,12 @@ import { Image } from 'astro:assets';
 
 import Layout from '../layouts/Layout.astro';
 import Footer from "../components/Footer.astro";
-import Header from "../components/react/Header.jsx";
+// import Header from "../components/react/Header.jsx";
 import Sidebar from "../components/react/Sidebar.jsx";
 
 import profilePicture from '../../public/images/ProfilePicture.webp';
-import airportPicture1 from '../../public/images/777-Takeoff-Hero.JPG';
-import airportPicture2 from '../../public/images/A350-Takeoff-Hero.JPG';
+import airportPicture1 from '../../public/images/777-Takeoff-Hero.jpg';
+import airportPicture2 from '../../public/images/A350-Takeoff-Hero.jpg';
 import moddingShowcaseImage from '../../public/images/FactoryProps1.webp';
 ---
 
