--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,13 +1,16 @@
 ---
+import "../styles/pages/not-found.scss";
 
-import Layout from "../layouts/Layout.astro";---
+import Layout from "../layouts/Layout.astro";
+---
 
 
-<Layout title="Jesse Hodgson / 404">
+<Layout title="Jesse Hodgson / 404 :(">
 
-    <p class="main-heading">404</p>
+<p class="main-heading">404</p>
 
 <br>
+
 <p class="subtext">
     Sorry, that page could not be found.<br>
     Would you like to return to the home page?
@@ -15,7 +18,7 @@ import Layout from "../layouts/Layout.astro";---
 
 <br>
 
-<a class="pill-button" href="index.astro">Home</a>
+<a class="pill-button" href="/">Home</a>
 
 <br><br>
 
