--- a/src/components/BioButton.astro
+++ b/src/components/BioButton.astro
@@ -2,7 +2,7 @@
 import {Image} from "astro:assets";
 const props = Astro.props
 
-import "../styles/biobutton.scss";
+import "../styles/components/biobutton.scss";
 
 ---
 
