--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/footer.scss";
+import "../styles/components/footer.scss";
 import {Image} from "astro:assets";
 import spaceGameDevLogo from '../../public/images/TripleSevenLogoJHAviation.png';
 ---
