--- a/src/styles/components/biobutton.scss
+++ b/src/styles/components/biobutton.scss
@@ -1,4 +1,4 @@
-@use 'shared';
+@use '../shared';
 
 .bio-button {
   background-color: #eae4e4;
@@ -17,7 +17,7 @@
   transition: 300ms;
   border: 1px solid rgba(255, 255, 255, 0);
 
-  box-shadow: 2px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 @media (prefers-color-scheme: dark) {
