--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,4 +15,5 @@ import SidebarToggle from './react/buttons/SidebarToggle.jsx';
 <div class="sidebar" id="sidebar">
     <SidebarButton title="Home" symbol="home" link="/"/>
     <SidebarButton title="About" symbol="data_info_alert" link="about" />
+    <SidebarButton title="Software" symbol="sdk" link="software" />
 </div>
