--- a/src/components/SidebarButton.astro
+++ b/src/components/SidebarButton.astro
@@ -7,6 +7,6 @@ import "../styles/components/sidebar-button.scss";
 
 <a href={props.link} class="sidebar-button">
 
-    <span class="material-symbols-outlined"> {props.symbol} </span>
-    <p> {props.title} </p>
+    <span class="material-symbols-rounded icon"> {props.symbol} </span>
+    <p class="title"> {props.title} </p>
 </a>
