--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,7 +1,7 @@
 ---
-
 import Layout from "../layouts/Layout.astro";
 import ContactForm from "../components/react/ContactForm.jsx";
+import '../styles/pages/contact.scss'
 ---
 
 
