--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,6 +48,35 @@ import moddingShowcaseImage from '../../public/images/FactoryProps1.webp';
 
             <br/><br/>
 
+        <figure
+                style="
+                display: inline-block;
+                float: left;
+
+                ">
+
+            <Image
+                    src={airportPicture1}
+                    alt="A Boeing 777-200ER taking off at Charlotte"
+                    width="950"
+                    height="633"
+                    class="plane-pic"
+            />
+
+            <figcaption
+            style="
+                display: block;
+                float: right;
+                font-size: 1.777rem;
+                font-family: Rubik, sans-serif;
+                font-weight: 700;
+
+            "
+            >
+                A Boeing 777-200ER operated by American Airlines taking off on Runway 18C at Charlotte Douglas International Airport.
+            </figcaption>
+        </figure>
+
             <div class="image-box">
 
                 <Image
