--- a/src/pages/linkinbio.astro
+++ b/src/pages/linkinbio.astro
@@ -16,6 +16,7 @@ import ThreadsLogo from '../../public/images/Icons/Threads.png';
 import InstagramLogo from '../../public/images/Icons/Instagram.png';
 import TwitchLogo from '../../public/images/Icons/Twitch.png';
 import SMRLogo from '../../public/images/Icons/SMR.webp';
+import WebsiteLogo from '../../public/favicon.svg';
 
 ---
 
@@ -36,6 +37,13 @@ import SMRLogo from '../../public/images/Icons/SMR.webp';
     <a href="https://www.buymeacoffee.com/spacegamedev"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=☕&slug=spacegamedev&button_colour=FFDD00&font_colour=000000&font_family=Cookie&outline_colour=000000&coffee_colour=ffffff" alt="Buy Me A Coffee" class="bmc-button"/></a>
 
     <br/><br/>
+
+    <BioButton
+        title="Website"
+        link="/"
+        image={WebsiteLogo}
+        alt="My Website"
+    />
 
     <BioButton
             title="Satisfactory Mods"
