--- a/src/styles/components/sidebar-toggle.scss
+++ b/src/styles/components/sidebar-toggle.scss
@@ -9,6 +9,11 @@
 
 .sidebar-button-toggle {
   border: none;
-  line-height: 50px;
   background: none;
+}
+
+.icon-large {
+  font-size: 48px;
+  font-variation-settings:
+          'opsz' 48
 }
