--- a/src/styles/components/contact-form.scss
+++ b/src/styles/components/contact-form.scss
@@ -7,7 +7,7 @@
   padding: 10px;
   background: #e1e3e4;
   border: none;
-  border-radius: 5px  5px 0px 0px;
+  border-radius: 5px 5px 0 0;
   resize: vertical;
   font-family: JetBrains Mono, monospace;
   color: shared.$text;
@@ -18,39 +18,5 @@
   .input-field {
     color: shared.$dark-text;
     background: #e1e3e4;
-  }
-}
-
-.pill-button {
-  display: block;
-  align-self: center;
-
-  text-decoration: none;
-  background: shared.$primary;
-  color: shared.$dark-text;
-  margin: auto auto;
-  padding: 20px 40px;
-
-  font-weight: bold;
-
-  width: fit-content;
-
-  border-radius: 50px;
-
-  transition: 0.3s;
-
-  border: none;
-  cursor: pointer;
-}
-
-.pill-button:hover {
-  filter: brightness(90%);
-  transform: scale(1.1);
-}
-
-@media (prefers-color-scheme: dark) {
-  .pill-button {
-    color: shared.$text;
-    background: shared.$dark-primary;
   }
 }
