--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -39,7 +39,7 @@
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  flex-wrap: wrap;
+
   justify-content: space-evenly;
   align-items: center;
   object-fit: contain;
@@ -61,7 +61,7 @@
 
 .side-text {
   overflow-wrap: break-word;
-  width: 30%; /* fixed width */
+  margin: 2rem;
   font-size: 1.777rem;
   font-family: Rubik, sans-serif;
   font-weight: 700;
